--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -53,8 +53,8 @@
 .dalton-video {margin-top: 200px;}
 .dalton-video_thumb {position: relative; width: 100%; height: 0; margin-top: 40px; padding-bottom: 46.053%; background: url('/src/img/dalton-video-thumb.png') no-repeat center center/cover; cursor: pointer;}
 .dalton-video_thumb::after {position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); width: 100px; height: 100px; background: url('/src/img/dalton-video-play.png') no-repeat center center/cover; content:"";}
-.dalton-video_popup {display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); z-index: 1000;}
-.dalton-video_frame {position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); width: 1300px; max-width: 90%; height: 0; padding-top: 38.5%; border-radius: 20px; overflow: hidden;}
+.dalton-video_popup {display: none; position: fixed; left: 0; top: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); z-index: 1000;}
+.dalton-video_frame {position: absolute; left: 50%; top: 50%; transform: translate(-50%,-50%); width: 1300px; max-width: 90%; height: 0; padding-top: 38.5%; overflow: hidden; box-shadow: 5px 5px 20px rgba(0,0,0,0.3);}
 .dalton-video_frame iframe {position: absolute; top: 0; left: 0; width: 100%; height: 100%;}
 
 /* 브랜드 스토리 > 고객리뷰 */
