--- a/src/css/common.css
+++ b/src/css/common.css
@@ -100,6 +100,10 @@ input {border-radius: 0;}
 .ui-sel::-ms-expand {display: none;}
 .ui-sel:after {display: none !important;}
 
+.ui-table {width: 100%; border: 1px solid var(--color-gray4);}
+.ui-table thead th {padding: 15px 5px; font-size: 18px; font-weight: 600; color: var(--color-black2); line-height: 1.55; word-break: break-all;}
+.ui-table tbody td {padding: 15px 5px; border-top: 1px solid var(--color-gray4); font-size: 18px; font-weight: 300; color: var(--color-black2); line-height: 1.55; word-break: break-all;}
+
 .typing-txt {display: none;}
 
 /* Input : radio */
